@@ -1,3 +1,12 @@
+2010-01-20  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        [Chromium] computePageRectsForFrame seems to be unnecessary
+        https://bugs.webkit.org/show_bug.cgi?id=33881
+
+        * src/WebFrameImpl.cpp: Stop including FrameChromium.h
+
 2010-01-19  Jon Honeycutt  <jhoneycutt@apple.com>
 
         Chromium build fix.
